Data cleaning - Select columns, fix multiple capture rate issue, serebii height and weight TODO.

--- a/ML_Assignment.Rmd
+++ b/ML_Assignment.Rmd
@@ -29,8 +29,10 @@ sapply(pokemon_data, class)
 
 # Initial data processing 
 pokemon_data_clean = pokemon_data %>% 
-  dplyr::select(-c(abilities, japanese_name, name)) %>% # Remove unneccessary columns 
-  dplyr::mutate(capture_rate = as.integer(if_else(capture_rate == "30 (Meteorite)255 (Core)", "30", capture_rate))) %>% # Fix character issue 
+  dplyr::select(-c(abilities, japanese_name, name, pokedex_number)) %>% # Remove unnecessary columns 
+  dplyr::mutate(capture_rate = as.numeric(if_else(capture_rate == "30 (Meteorite)255 (Core)", "142.5", capture_rate))) %>% # Fix character issue 
+  # Minior has a differing catch rate dependent on form based on if it is above or below 50% hp and therefore the expected value for catch rate is 
+  # assumed to be (30 + 255) / 2 = 142.5 
   dplyr::mutate(generation = as.factor(generation)) %>% # Make generation a factor 
   dplyr::mutate(is_legendary = as.factor(is_legendary)) %>% # Make is_legendary a factor 
   dplyr::mutate(type1 = as.factor(type1)) %>% # Make type1 a factor 
@@ -74,6 +76,8 @@ pokemon_data_clean = pokemon_data_clean %>%
   dplyr::mutate(percentage_male_cat = as.factor(percentage_male_cat)) %>% # Make percentage_male_cat a factor 
   dplyr::select(-percentage_male) # Remove percentage_male column 
 
+# TODO: Can manually get specific height and weight values from serebii instead of imputing 
+
 ```
 
 ```{r}
@@ -82,5 +86,4 @@ pokemon_data_clean = pokemon_data_clean %>%
 any(is.na(pokemon_data_clean))
 
 ```
-
 
