--- a/ML_Assignment.Rmd
+++ b/ML_Assignment.Rmd
@@ -50,7 +50,8 @@ pokemon_data_clean = pokemon_data %>%
   dplyr::mutate(type1 = as.factor(type1)) %>% # Make type1 a factor 
   dplyr::rename(classification = classfication) %>% 
   dplyr::mutate(classification = as.factor(classification)) %>% # Make classification a factor 
-  dplyr::select(-classification) # TODO: Decide to keep classification or not. Currently removed due to many small classes 
+  dplyr::select(-c(classification, is_legendary)) # TODO: Decide to keep classification or not. Currently removed due to many small classes 
+  # Remove is_legendary based on feature importance being very low and only a very small reduction in accuracy once removed 
 
 ```
 
@@ -104,7 +105,7 @@ any(is.na(pokemon_data_clean))
 
 # Remove categorical variables 
 pokemon_data_pairs = pokemon_data_clean %>% 
-  dplyr::select(-c(type1, generation, is_legendary, percentage_male_cat))
+  dplyr::select(-c(type1, generation, percentage_male_cat))
 
 # Prepare data 
 pokemon_data_pairs_matrix = cor(pokemon_data_pairs)
@@ -147,7 +148,7 @@ skim(pokemon_data_clean)
 
 # Create subset with only numeric variables 
 pokemon_data_clean_numeric = pokemon_data_clean %>% 
-  dplyr::select(-c(type1, generation, is_legendary, percentage_male_cat))
+  dplyr::select(-c(type1, generation, percentage_male_cat))
 
 # Create numeric variables summary table 
 kable(summary(pokemon_data_clean_numeric)) %>%
@@ -159,7 +160,7 @@ kable(summary(pokemon_data_clean_numeric)) %>%
 
 # Create subset with only categorical variables 
 pokemon_data_clean_categorical = pokemon_data_clean %>% 
-  dplyr::select(c(type1, generation, is_legendary, percentage_male_cat))
+  dplyr::select(c(type1, generation, percentage_male_cat))
 
 # Create categorical variables summary table 
 kable(summary(pokemon_data_clean_categorical)) %>%
@@ -187,11 +188,14 @@ training_data = pokemon_data_clean[-indices,]
 ```{r}
 
 # Define mtry values to run for tuning 
-tuneGrid = expand.grid(mtry = c(1:35))
+tuneGrid = expand.grid(mtry = c(1:ncol(pokemon_data_clean)))
 
 # Specify 5-fold cross-validation 
 fitControl = trainControl(method = "cv", 
                           number = 5)
+
+# Set seed 
+set.seed(123)
 
 # Perform 5-fold cross-validation and mtry tuning 
 model_rf = train(type1 ~ ., 
@@ -244,6 +248,8 @@ for (ntrees in c(500, 1000, 2000, 4000)) {
 set.seed(123)
 
 model_rf = randomForest(type1 ~ ., data = training_data, ntree = 500, mtry = mtry)
+
+model_rf
 
 # Assess feature importance 
 importance(model_rf)
